# cicd

./: .gitmodules
t3-cicd-backend/: LICENSE  README.md  settings.gradle.kts
t3-cicd-backend/.github/: pull_request_template.md  reviewer-lottery.yml
t3-cicd-backend/configservice/: Dockerfile  build.gradle.kts
t3-cicd-backend/minikube/: K8sDeployment_dev.md  K8sDeployment_user.md  clusterrolebinding.yaml  configservice-deployment.yaml  ingress-controller-local.yaml  ingress-controller-prod.yaml  pgadmin-deploy.yaml  pgadmin-secret.yaml  pipelineservice-deployment.yaml  postgres-configmap.yaml  postgres-deploy.yaml  postgres-secret.yaml
t3-cicd-backend/pipelineservice/: Dockerfile  build.gradle.kts
t3-cicd-backend/shared/: build.gradle.kts
t3-cicd-cli/: .flake8  .gitignore  FeatureStatus.md  LICENSE  README.md  noxfile.py  pyproject.toml
t3-cicd-cli/.github/: pull_request_template.md  reviewer-lottery.yml
t3-cicd-cli/.github/workflows/: assign-reviewer.yml  pipeline-run.yml  remove-old-artifacts.yml
t3-cicd-cli/intergration_tests/: README.md  run.sh  run_local.sh  validate.sh
t3-cicd-cli/src/t3_cicd_cli/: cli.py
t3-cicd-cli/src/t3_cicd_cli/command/: config.py  info.py  job.py  log.py  run.py  validate.py
t3-cicd-cli/src/t3_cicd_cli/constant/: api.py  cli_config.py  default.py
t3-cicd-cli/src/t3_cicd_cli/utils/: api.py  git_operations.py
t3-cicd-cli/tests/t3_cicd_cli/command/: test_config.py  test_info.py  test_job.py  test_log.py  test_run.py  test_validate.py
t3-cicd-cli/tests/utils/: test_api.py  test_git_operations.py
(+44 files in other folders)
